objects/niq__Prediction_Result__c.object
<CustomObject>
    <description>This object stores the results from the Prediction object.</description>
    <fields>
        <fullName>niq__API_Version__c</fullName>
        <description>The system automatically populates this field with the version of the AWS endpoint used in this prediction.</description>
        <label>API Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Creation_Date__c</fullName>
        <description>The system automatically populates this date field with the creation date.</description>
        <label>Creation Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>niq__Insight__c</fullName>
        <description>The system automatically populates this field with supporting text to accompany the prediction value.</description>
        <label>Insight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Model_Name__c</fullName>
        <description>The system automatically populates this field with the name of the model used in this prediction.</description>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Model_Version__c</fullName>
        <description>The system automatically populates this field with the numeric version of the model used in this prediction.</description>
        <label>Model Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Prediction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field with the related prediction.</description>
        <label>Prediction</label>
        <referenceTo>niq__Prediction__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Related_Prediction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Related_Object_Id__c</fullName>
        <description>The system automatically populates this text field with the API name of the related object.</description>
        <label>Related Object Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Related_Object_Type__c</fullName>
        <description>The system automatically populates this text field with the sObject type of the related object.</description>
        <label>Related Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Request_Id__c</fullName>
        <description>The system automatically populates this field with the associated request ID.</description>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Request_Time__c</fullName>
        <description>The system automatically populates this field with the prediction’s processing time.</description>
        <label>Request Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>niq__Result_Value__c</fullName>
        <description>Deprecated as of Fall 2020.</description>
        <label>-D Result Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Results__c</fullName>
        <description>The system automatically populates this field with the result value of the prediction.</description>
        <label>Result Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>niq__Source_Context__c</fullName>
        <description>The system automatically populates this text field with the context from which the prediction originated.</description>
        <label>Source Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Status__c</fullName>
        <description>The system automatically populates this picklist field with the completion status of the prediction.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prediction Result</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prediction Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>